--- a/TelegramBotSharp/TelegramBotSharp.csproj
+++ b/TelegramBotSharp/TelegramBotSharp.csproj
@@ -44,9 +44,17 @@
   <ItemGroup>
     <Compile Include="TelegramBot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Types\AttachmentMessage.cs" />
+    <Compile Include="Types\Audio.cs" />
+    <Compile Include="Types\Contact.cs" />
+    <Compile Include="Types\Document.cs" />
     <Compile Include="Types\GroupChat.cs" />
+    <Compile Include="Types\Location.cs" />
     <Compile Include="Types\Message.cs" />
+    <Compile Include="Types\PhotoSize.cs" />
+    <Compile Include="Types\Sticker.cs" />
     <Compile Include="Types\User.cs" />
+    <Compile Include="Types\Video.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
