Added example project + basic functionality
Made Me a property + added caching
Made Chat a single property (bug: will always be populated even if
message is from a user)

--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 TelegramBotSharp.Tests/apikey.txt
+TelegramBotSharp.Examples.Console/apikey.txt
+TelegramBotSharp.ConsoleExample/apikey.txt
