Added image sending and changed overloads
SendMessage now takes either a GroupChat or User - both inherit from
MessageTarget
Fixed regression with serializing images (RestSharp doesn't like arrays)

--- a/TelegramBotSharp/TelegramBotSharp.csproj
+++ b/TelegramBotSharp/TelegramBotSharp.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Types\GroupChat.cs" />
     <Compile Include="Types\Location.cs" />
     <Compile Include="Types\Message.cs" />
+    <Compile Include="Types\MessageTarget.cs" />
     <Compile Include="Types\PhotoSize.cs" />
     <Compile Include="Types\Sticker.cs" />
     <Compile Include="Types\Update.cs" />
