--- a/TelegramBotSharp.ConsoleExample/TelegramBotSharp.ConsoleExample.csproj
+++ b/TelegramBotSharp.ConsoleExample/TelegramBotSharp.ConsoleExample.csproj
@@ -62,6 +62,7 @@
     <Content Include="doomimage.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="LICENSE.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
