--- a/TelegramBotSharp.Tests/TelegramBotSharp.Tests.csproj
+++ b/TelegramBotSharp.Tests/TelegramBotSharp.Tests.csproj
@@ -75,6 +75,7 @@
     <Content Include="apikey.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="LICENSE.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
